overflow on footer achor corrected

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -543,7 +543,7 @@ et_pb_accordion.x-toggle
 
 #x-footer-target
   position: absolute
-  margin: -100px
+  margin-top: -100px
   width: 0
   height: 0
 
